# lib_flir_camera

./: CMakeLists.txt  package.xml  readme.md
scripts/: find_web.py
src/: open_camera.cpp  open_images.cpp
